--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="separator"></div>
 
-      <a href="mailto:booking@restaurant.com" class="topbar-item link">
+      <a href="nshutisimba@gmail.com" class="topbar-item link">
         <div class="icon">
           <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
         </div>
@@ -74,7 +74,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/DALL·E 2024-11-11 12.43.33 - A logo for 'Nshutisimba Restaurant,' designed to be versatile and appealing for a restaurant offering a range of cuisines. The logo should have a clea.webp" width="160" height="50" alt="Nshutisimba - Home">
+        <img src="./assets/images/Nshutisimba_Restaurant_Logo.jpg" width="160" height="50" alt="Nshutisimba - Home">
       </a>
 
       <nav class="navbar" data-navbar>
