--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/DALL·E 2024-11-11 12.43.33 - A logo for 'Nshutisimba Restaurant,' designed to be versatile and appealing for a restaurant offering a range of cuisines. The logo should have a clea.webp" width="160" height="50" alt="Nshutisimba - Home">
+          <img src="./assets/images/Nshutisimba_Restaurant_Logo.jpg" width="160" height="50" alt="Nshutisimba - Home">
         </a>
 
         <ul class="navbar-list">
