--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@
 
         <p class="copyright">
           &copy; 2024 nshutisimba. All Rights Reserved | Crafted by <a href="https://nshutisimba.github.io/Nshutisimba-Restaurant/"
-            target="_blank" class="link">codewithsadee</a>
+            target="_blank" class="link">coded by nshutisimba</a>
         </p>
 
       </div>
