--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 nshutisimba. All Rights Reserved | Crafted by <a href="https://nshutisimba.github.io/Nshutisimba-Restaurant/"
+          &copy; 2024 nshutisimba. All Rights Reserved | Crafted by <a href="https://github.com/Nshutisimba"
             target="_blank" class="link">coded by nshutisimba</a>
         </p>
 
